# migration_economics

./: .gitignore  AGENTS.md  METHODOLOGY.md  METHODOLOGY_REVIEW.md  README.md  dp16472.txt  findings.md  pyproject.toml
data/sources/: SOURCES.md
scripts/: analyze.py  diagnostics.py  download_sources.sh  eu_breakout.py  extract_sources.py
