[project]
name = "migration-economics"
version = "0.1.0"
description = "Re-analysis tooling for migration and productivity source data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
